Added the "shift" functionality alongside the key to encode the message with more complexity

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <br /> <br />
     <label for="userKey">Key:</label>
     <input type="number" min="0" max="26" id="userKey" value="1" onchange="enDeCode()" />
+    <label for="userKey">Shift:</label>
+    <input type="number" min="0" max="26" id="userShift" value="1" onchange="enDeCode()" />
     <br /> <br />
     <label for="output">Output:</label><br />
     <textarea id="output" rows="4" cols="50"></textarea>
